<resources>
    <string name="app_name">AppSolveTriangles</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--For conv_deg_rad_frag-->
    <string name="degrees">Градусы</string>
    <string name="radians">Радианы</string>
    <string name="deg_to_rad">↓ Град.->Рад. ↓</string>
    <string name="rad_to_deg">↑ Рад.->Град. ↑</string>

    <!--For triangle_solve_frag-->
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="Solve_triangle">  Решить треугольник  </string>

    <!--For calcu_frag-->
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>

    <string name="bPlus">+</string>
    <string name="bMinus">-</string>
    <string name="bMultiply">×</string>
    <string name="bDivide">÷</string>
    <string name="bEqual">=</string>

    <string name="bXPow2">Х<sup>2</sup></string>
    <string name="bSqrt2">√Х</string>
    <string name="bXPowN">X<sup>n</sup></string>
    <string name="bXRootN"><sup>n</sup>√Х</string>
    <string name="bLogyX">log<sub>y</sub>X</string>


    <string name="b2ndMod">2<sup>nd</sup></string>
    <string name="bSin">sinX</string>
    <string name="bCos">CosX</string>
    <string name="bTan">tanX</string>

    <!--For setting_frag-->
    <string name="Settings">Настройки</string>
    <string name="ChangeColor">Изменить цвет</string>


    <!--For app_info_frag-->
    <string name="info">инфо</string>
    <string name="main_info">
       Это мобильное приложение было создано для решения треугольников,
        конвертации градусов и радианов, и пр. вычислений.
        \n
        \n
        Цель данного приложения - создание проекта для начинающего разработчика,
        это приложение очень небольшое и мне, как автору, было приятно его разрабатывать.
        \n
        \n
        Я хочу сказать спасибо всем тем, кто помогал мне и поддерживал меня, особенно Алексею Александровичу Самолову и Попову Владимиру
        \n
        \n
        Использованные материалы:\n
        Иконки от Google Icons и \n
        <a target="_blank" href="https://icons8.com/icon/95877/квадратный-корень">Квадратный корень</a> иконка от <a target="_blank" href="https://icons8.com">Icons8</a>
    </string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">главная</string>

    <string name="settings">настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Clear">Очистить</string>
    <string name="print">Вывести</string>
    <string name="here_will_print_prime_nums">Тут выведутся простые числа</string>
    <string name="Prime_Nums_from">Простые числа с:</string>
    <string name="Prime_Nums_to">Простые числа до:</string>
    <string name="And_how_many_them">И сколько их</string>
    <string name="a_sup_n_sup_b_x"><![CDATA[A * <sup>n</sup>√B = X]]></string>

</resources>