<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvDegRadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <Button
            android:id="@+id/b_radToDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="120dp"
            android:background="@color/material_dynamic_neutral70"
            android:text="@string/rad_to_deg"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Button
            android:id="@+id/b_degToRad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="64dp"
            android:background="@color/material_dynamic_neutral70"
            android:text="@string/deg_to_rad"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_degs"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/degrees"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="178dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_rads"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/radians"
                android:inputType="number|numberDecimal|numberSigned"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/b_ClearData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/Clear"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>