<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolveTriangleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tVforErrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@color/material_dynamic_neutral70"
            android:text="@string/Solve_triangle"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="100dp"
            android:layout_height="56dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="120dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_sa"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/a"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_A"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:hint="@string/A"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_sb"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/b"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_B"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/B"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_sc"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/c"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/material_dynamic_neutral70"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input_C"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/C"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bSolveIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/Solve_triangle"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tVforErrs" />

        <Button
            android:id="@+id/b_ClearData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Clear"
            android:textColor="@color/black"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="@+id/bSolveIt"
            app:layout_constraintStart_toStartOf="@+id/bSolveIt"
            app:layout_constraintTop_toBottomOf="@+id/bSolveIt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>